# riffnote

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md
backend/: CLAUDE.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8688ad5210b0_rename_content_json_to_content.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  note.py  notebook.py  user.py
backend/app/routers/: notebooks.py  notes.py
backend/app/schemas/: note.py  notebook.py
backend/app/services/: gemini_service.py  processing_service.py  storage_service.py  tiptap_converter.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/: recording-button.tsx
frontend/app/lib/: api.ts  use-is-mobile.ts
frontend/app/routes/: home.tsx  new-note.tsx  note-detail.tsx  notebook-notes.tsx  notebooks.tsx  privacy.tsx
