[project]
name = "riffnote-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
]
